[package]
name = "webhook-runners"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.8"
aws-sdk-ecs = "1.47.0"
axum = "0.7.7"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.128"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
hyper = "1.4.1"
tracing = "0.1.40"
