[package]
name = "webhook-runners"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.8"
aws-sdk-ecs = "1.47.0"
serde_json = "1.0.128"
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
hyper = "1.4.1"
tracing = "0.1.40"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
constant_time_eq = "0.3.1"
openssl = { version = "0.10.35", features = ["vendored"] }
lambda_http = "0.13.0"
http = "1.1.0"
jsonwebtoken = "9"
octocrab = "0.41.1"
anyhow = "1.0.98"
